--- a/css/media.css
+++ b/css/media.css
@@ -8,7 +8,8 @@
     }
 
     .nav.open .nav-list {
-        display: block;
+        /* display: block; */
+
         position: fixed;
         top: 0;
         bottom: 0;
