--- a/css/main.css
+++ b/css/main.css
@@ -83,11 +83,33 @@ body {
 
 /* Nav */
 
+.nav{
+    position: relative;
+}
+
+.open{
+    /* display: none; */
+}
+
 .nav-list {
     display: flex;
     column-gap: 50px;
     font-weight: 500;
     font-size: 14px;
+}
+
+.nav-item{
+    color: #000;
+    transition: 0.6s;
+}
+
+.nav-item:hover ::after {
+    content:"";
+    width: 100%;
+    height: 2px;
+    background-color: #090909;
+    display: block;
+ 
 }
 
 .nav-button {
@@ -96,7 +118,11 @@ body {
 
 .nav-link {
     color: #000;
+    transition: color 0.1s linear;
+}
 
+.nav-link:hover{
+    color: #606060;
 }
 
 .nav-link.active {
